--- a/templates/components/module_board_component.mustache
+++ b/templates/components/module_board_component.mustache
@@ -65,3 +65,10 @@
             </div>
         </div>
 {{/ is_teacher }}
+{{#js}}
+    {{# is_teacher }}
+        require(['theme_cbe/module_delete'], function(moduledelete) {
+            moduledelete.initModuleDelete('[data-region="modal-mod-delete"][data-cmid="{{ id }}"]', {{ id }});
+        });
+    {{/ is_teacher }}
+{{/js}}
