--- a/templates/components/publication_board_component.mustache
+++ b/templates/components/publication_board_component.mustache
@@ -6,7 +6,10 @@
         </button>
     </div>
     <div class="text">
-        <div class="name">{{ author.fullname }}</div>
+        <div class="name">
+            {{ author.fullname }}
+            <span class="msgrestriction {{ moderestriction }}">{{ msgrestriction }}</span>
+        </div>
         <div class="added">{{ added }}</div>
         <div class="publication">{{ comment }}</div>
     </div>
