fix assign header

--- a/scss/pages/_module.scss
+++ b/scss/pages/_module.scss
@@ -60,6 +60,7 @@ body[data-theme='cbe'][data-role='user'] {
   }
 
   &#page-mod-assign-view,
+  &#page-mod-assign-editsubmission,
   &#page-mod-assign-overrides {
     div[role="main"]>h2 {
       &:after {
