--- a/scss/cbe.scss
+++ b/scss/cbe.scss
@@ -17,6 +17,7 @@
 @import "components/block_timeline";
 @import "components/message";
 @import "components/modassign";
+@import "components/assignsubmission_tipnc";
 
 @import "layout/navbar";
 @import "layout/flatnav";
