--- a/scss/pages/_module.scss
+++ b/scss/pages/_module.scss
@@ -61,6 +61,8 @@ body[data-theme='cbe'][data-role='user'] {
 
   &#page-mod-assign-view,
   &#page-mod-assign-editsubmission,
+  &#page-mod-assign-removesubmissionconfirm,
+  &#page-mod-assign-submit,
   &#page-mod-assign-overrides {
     div[role="main"]>h2 {
       &:after {
