--- a/scss/pages/_course.scss
+++ b/scss/pages/_course.scss
@@ -94,6 +94,9 @@ body[data-theme='cbe'][data-role='user'] {
                   &.page {
                     background-image: url('[[pix:mod_page|icon]]');
                   }
+                  &.folder {
+                    background-image: url('[[pix:mod_folder|icon]]');
+                  }
                 }
                 .data {
                   display: flex;
