--- a/scss/components/_modal.scss
+++ b/scss/components/_modal.scss
@@ -243,6 +243,7 @@ body[data-theme='cbe'][data-role="user"] {
       border-radius: 20px;
       padding: 20px;
       font-style: italic;
+      text-align: left;
     }
   }
 
