--- a/templates/components/publication_board_component.mustache
+++ b/templates/components/publication_board_component.mustache
@@ -11,7 +11,7 @@
             <span class="msgrestriction {{ moderestriction }}">{{ msgrestriction }}</span>
         </div>
         <div class="added">{{ added }}</div>
-        <div class="publication">{{ comment }}</div>
+        <div class="publication">{{{ comment }}}</div>
     </div>
     {{# is_teacher }}
         {{# is_mine }}
