--- a/scss/pages/_resources.scss
+++ b/scss/pages/_resources.scss
@@ -35,6 +35,23 @@ body[data-theme='cbe'][data-role='user'] {
           color: white;
         }
       }
+      .typeresource {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        .icon {
+          background-color: $primary-color;
+          padding: 6px;
+          height: 28px;
+          width: 26px;
+          margin: 0;
+        }
+        .name {
+          text-align: center;
+          font-size: 12px;
+        }
+      }
     }
 
   }
