--- a/scss/layout/_navbar.scss
+++ b/scss/layout/_navbar.scss
@@ -16,9 +16,21 @@ body[data-theme='cbe'] {
       height: $nav-height;
       margin: 0 20px;
       z-index: 1032;
+      @media (max-width: 1000px) {
+        margin: 0;
+      }
       > img {
         height: 60px;
         width: inherit;
+        @media (max-width: 1200px) {
+          height: 45px;
+        }
+        @media (max-width: 940px) {
+          height: 35px;
+        }
+        @media (max-width: 700px) {
+          height: 30px;
+        }
       }
     }
   }
@@ -44,6 +56,9 @@ body[data-theme='cbe'] {
     &[data-theme='cbe'] {
       .nav-item {
         padding-right: 10px;
+        @media (max-width: 940px) {
+          padding-right: 0;
+        }
       }
       .menu-lang {
         z-index: 1050;
@@ -74,6 +89,9 @@ body[data-theme='cbe'] {
             font-size: 30px;
             color: $black-ligth;
             margin-right: 12px;
+            @media (max-width: 940px) {
+              margin-right: 0;
+            }
           }
           .usermenu {
             .userbutton {
@@ -84,6 +102,9 @@ body[data-theme='cbe'] {
                 height: 50px;
                 width: 50px;
                 border: 2px solid $grey-light;
+                @media (max-width: 940px) {
+                  margin: 0;
+                }
               }
             }
             a.dropdown-toggle {
@@ -91,6 +112,19 @@ body[data-theme='cbe'] {
               &::after {
                 content: inherit;
               }
+            }
+          }
+          #nav-notification-popover-container,
+          [data-region="popover-region-messages"]
+          {
+            @media (max-width: 730px) {
+              display: none;
+            }
+            @media (max-width: 575px) {
+              display: inline;
+            }
+            @media (max-width: 408px) {
+              display: none;
             }
           }
         }
@@ -177,6 +211,9 @@ body[data-theme='cbe'] {
         #menu-apps-btn {
           margin-right: 20px;
           cursor: pointer;
+          @media (max-width: 940px) {
+            margin-right: 0;
+          }
           #dropdownMenuButton {
             cursor: pointer;
             border: none;
@@ -195,6 +232,15 @@ body[data-theme='cbe'] {
             overflow-y: scroll;
             scrollbar-color: $grey-border transparent;
             scrollbar-width: thin;
+            @media (min-width: 0) {
+              right: -104px;
+            }
+            @media (min-width: 409px) {
+              right: -140px;
+            }
+            @media (min-width: 576px) {
+              right: 0;
+            }
             ul.apps, ul#app-my-courses, ul#app-admin, ul#app-external {
               list-style: none;
               display: grid;
@@ -268,6 +314,16 @@ body[data-theme='cbe'] {
         display: flex;
         align-items: center;
         justify-content: center;
+        @media (max-width: 940px) {
+          left: 0;
+        }
+        @media (max-width: 701px) {
+          left: 20px;
+        }
+        @media (max-width: 575px) {
+          left: 100px;
+          justify-content: flex-start;
+        }
         ul.course-menu {
           display: flex;
           list-style: none;
@@ -280,6 +336,9 @@ body[data-theme='cbe'] {
             font-size: 18px;
             position: relative;
             padding: 0 20px;
+            @media (max-width: 940px) {
+              padding: 0 10px;
+            }
             &.active {
               font-family: $fontbold;
               &::after {
@@ -296,8 +355,34 @@ body[data-theme='cbe'] {
             a.link {
               text-decoration: none;
               color: inherit;
+              @media (max-width: 1200px) {
+                font-size: 14px;
+              }
+              @media (max-width: 980px) {
+                font-size: 12px;
+              }
               &:hover {
                 color: $grey-medium;
+              }
+            }
+            &.tasks {
+              @media (max-width: 700px) {
+                display: none;
+              }
+            }
+            &.moreinfo {
+              @media (max-width: 620px) {
+                display: none;
+              }
+            }
+            &.board {
+              @media (max-width: 470px) {
+                display: none;
+              }
+            }
+            &.themes {
+              @media (max-width: 470px) {
+                display: none;
               }
             }
           }
