--- a/templates/footer.mustache
+++ b/templates/footer.mustache
@@ -26,7 +26,7 @@
 <footer id="page-footer" class="py-3 bg-dark text-light">
     <div class="container">
         <div class="politics">
-        {{{ output.standard_footer_html }}} <span class="more"> | <a href="">Políticas de privacidad</a></span>
+            {{{ output.standard_footer_html }}} <span class="more"><span class="pipe">|</span><a href="{{ policies_url }}" target="_blank">{{#str}} policies, theme_cbe {{/str}}</a></span>
         </div>
         {{{ output.standard_end_of_body_html }}}
     </div>
