--- a/templates/header/board.mustache
+++ b/templates/header/board.mustache
@@ -29,7 +29,7 @@
     }
 }}
 <header id="page-header" class="row {{ nav_context }}">
-    <div class="col-9 pt-3 pb-3">
+    <div class="col-md-12 col-lg-12 col-xl-9 pt-3 pb-3">
         <div class="card header-board" style='background-image: url("{{{ courseimage }}}");'>
             <div class="degraded">
                 <div class="title-box">
