--- a/templates/sections/course_left_section_component.mustache
+++ b/templates/sections/course_left_section_component.mustache
@@ -1,6 +1,6 @@
-<div id="course-left-section">
+<div id="course-left-section" class="row">
     {{# sections }}
-    <div class="menu-card">
+    <div class="menu-card col-md-6 col-lg-6 col-xl-12">
         {{{ . }}}
     </div>
     {{/ sections }}
