--- a/scss/pages/_module.scss
+++ b/scss/pages/_module.scss
@@ -6,6 +6,7 @@ body[data-theme='cbe'][data-role='user'] {
       background-color: white;
       border: 1px solid $border-color;
       padding: 30px;
+      margin-bottom: 15px;
       div[role="main"] {
         >h2,>h3 {
           font-size: 28px;
