--- a/scss/pages/_moreinfo.scss
+++ b/scss/pages/_moreinfo.scss
@@ -1,7 +1,7 @@
 body[data-theme='cbe'][data-role='user'] {
 
   div[data-region='moreinfo'] {
-
+    margin-bottom: 15px;
     main.contain {
       background-color: white;
       padding: 30px;
