--- a/templates/components/module_board_component.mustache
+++ b/templates/components/module_board_component.mustache
@@ -13,7 +13,7 @@
             {{ name }}
             </a>
         </div>
-        <div class="added">{{ sectionname }} - <span>{{ added }}</span></div>
+        <div class="added"><span class="section">{{ sectionname }}</span><span class="separ">-</span><span class="date">{{ added }}</span></div>
     </div>
     <div class="action-mod">
         {{# is_teacher }}
