--- a/templates/components/publication_board_component.mustache
+++ b/templates/components/publication_board_component.mustache
@@ -7,7 +7,7 @@
     </div>
     <div class="text">
         <div class="name">
-            {{ author.fullname }}
+            <span>{{ author.fullname }}</span>
             <span class="msgrestriction {{ moderestriction }}">{{ msgrestriction }}</span>
         </div>
         <div class="added">{{ added }}</div>
