--- a/templates/header/board.mustache
+++ b/templates/header/board.mustache
@@ -34,7 +34,7 @@
             <div class="degraded">
                 <div class="title-box">
                     <h3 class="category">{{ categoryname }}</h3>
-                    <h2 class="coursename">{{ coursename }}</h2>
+                    <h2 class="coursename">{{#shortentext}} 100, {{ coursename }} {{/shortentext}}</h2>
                 </div>
                 <ul class="teachers-box">
                     {{# teachers }}
