--- a/templates/header/header.mustache
+++ b/templates/header/header.mustache
@@ -29,7 +29,7 @@
     }
 }}
 <header id="page-header" class="row {{ nav_context }}">
-    <div class="col-12 pt-3 pb-3">
+    <div class="col-md-12 col-lg-12 col-xl-9 pt-3 pb-3">
         <div class="card {{^contextheader}}border-0 bg-transparent{{/contextheader}}">
             <div class="card-body {{^contextheader}}p-2{{/contextheader}}">
                 <div class="d-sm-flex align-items-center">
