--- a/scss/components/_modal.scss
+++ b/scss/components/_modal.scss
@@ -71,6 +71,9 @@ body[data-theme='cbe'][data-role="user"] {
           .mods {
             display: flex;
             flex-direction: row;
+            @media (max-width: 991px) {
+              flex-direction: column
+            }
           }
           .sections {
             label {
@@ -82,6 +85,10 @@ body[data-theme='cbe'][data-role="user"] {
               margin: 2px 45px 18px;
               max-width: 633px;
               padding: 5px;
+              @media (max-width: 991px) {
+                max-width: 340px;
+                margin: 2px 20px 20px 0;
+              }
             }
           }
         }
@@ -96,6 +103,10 @@ body[data-theme='cbe'][data-role="user"] {
           ul.select-modules {
             list-style: none;
             margin-top: 25px;
+            @media (max-width: 991px) {
+              padding: 0;
+              margin-right: 12px;
+            }
             li.select-module {
               margin: 10px 0;
               a.create-mod {
