--- a/scss/components/_modtresipuntvideo.scss
+++ b/scss/components/_modtresipuntvideo.scss
@@ -174,6 +174,9 @@
 #page-theme-cbe-view_moreinfo[data-theme='cbe'][data-role="user"]   {
   .resourcecontent {
     margin: 15px 200px 40px !important;
+    @media (max-width: 900px) {
+      margin: 15px 20px 40px!important;
+    }
   }
 }
 
