--- a/templates/columns2/columns2_index.mustache
+++ b/templates/columns2/columns2_index.mustache
@@ -64,7 +64,7 @@
             {{{ output.full_header }}}
 
             <div id="page-content" class="row pb-3 d-print-block {{ nav_context }}">
-                <div id="region-main-box" class="col-9">
+                <div id="region-main-box" class="col-md-12 col-lg-12 col-xl-9">
 
                     {{#hasregionmainsettingsmenu}}
                     <div id="region-main-settings-menu" class="d-print-none {{#hasblocks}}has-blocks{{/hasblocks}}">
