--- a/templates/header/system.mustache
+++ b/templates/header/system.mustache
@@ -29,7 +29,7 @@
     }
 }}
 <header id="page-header" class="row system">
-    <div class="col-9 pt-3 pb-3">
+    <div class="col-md-12 col-lg-12 col-xl-9 pt-3 pb-3">
         <div class="card {{^contextheader}}border-0 bg-transparent{{/contextheader}} header" style='background-image: url("{{{ courseimage }}}");'>
 
             <div class="card-body {{^contextheader}}p-2{{/contextheader}}">
